--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,7 @@
 <%= render 'layouts/errors', obj: @book %>
+<div class="row">
+  <p>こんにちは！</p>
+</div>
 
 <div class='row'>
   <div class='col-xs-3'>
