--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/errors', obj: @book %>
 <div class="row">
-  <p>こんにちは！</p>
+  <p>こんにちは！コンフリクトだよ</p>
 </div>
 
 <div class='row'>
